[gd_scene load_steps=8 format=3 uid="uid://bruqyl3ny4ejt"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_20vaq"]
[ext_resource type="FontFile" uid="uid://bhmp00k1x74q3" path="res://ui/fonts/PixelMechaBold.ttf" id="2_e4nvy"]
[ext_resource type="FontFile" uid="uid://dv3201q5d4liu" path="res://ui/fonts/PixelMecha.ttf" id="3_0703i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2e75"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcwao"]
bg_color = Color(0.0705882, 0.305882, 0.537255, 0)
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qpo1"]
bg_color = Color(0, 0.6, 0.858824, 1)
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipdxg"]
bg_color = Color(0.172549, 0.909804, 0.960784, 1)
border_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j2e75")
script = ExtResource("1_20vaq")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 72.0
offset_right = 20.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_e4nvy")
theme_override_font_sizes/font_size = 94
text = "SPACE ROCKS"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(140, 105)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -52.5
offset_right = 70.0
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_0703i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwao")
theme_override_styles/hover = SubResource("StyleBoxFlat_4qpo1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ipdxg")
text = "START GAME"

[node name="SettingsButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_0703i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwao")
theme_override_styles/hover = SubResource("StyleBoxFlat_4qpo1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ipdxg")
text = "SETTINGS"

[node name="ExitGameButton" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_0703i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwao")
theme_override_styles/hover = SubResource("StyleBoxFlat_4qpo1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ipdxg")
text = "EXIT GAME"

[node name="AttractModeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="GridContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="GridContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="GridContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="timeout" from="AttractModeTimer" to="." method="_on_attract_mode_timer_timeout"]
